# NodeWatch

./: README.md
desktop/qt_client/: CMakeLists.txt  README.md  nodewatch.ini.example
desktop/qt_client/include/: HttpServer.h  MainWindow.h  TelemetryEntry.h  TelemetryStore.h
desktop/qt_client/include/config/: AppSettings.h
desktop/qt_client/include/logging/: log_level.hpp  logger.hpp
desktop/qt_client/include/rules/: TelemetryAlerts.h
desktop/qt_client/include/server/: HttpServer.h
desktop/qt_client/include/storage/: TelemetryStore.h
desktop/qt_client/include/ui/: MainWindow.h
desktop/qt_client/src/: HttpServer.cpp  MainWindow.cpp  TelemetryEntry.cpp  TelemetryStore.cpp  main.cpp
desktop/qt_client/src/config/: AppSettings.cpp
desktop/qt_client/src/logging/: logger.cpp
desktop/qt_client/src/models/: TelemetryEntry.cpp
desktop/qt_client/src/rules/: TelemetryAlerts.cpp
desktop/qt_client/src/server/: HttpServer.cpp
desktop/qt_client/src/storage/: TelemetryStore.cpp
desktop/qt_client/src/ui/: MainWindow.cpp
docs/: README.md
firmware/ep32_sender/: CMakeLists.txt  Kconfig.projbuild  README.md  sdkconfig.defaults
firmware/ep32_sender/main/: CMakeLists.txt  app_config.h  app_main.c
